--- a/src/main/webapp/humanCare.zul
+++ b/src/main/webapp/humanCare.zul
@@ -11,7 +11,9 @@
 			<!-- Navigation -->
 			<apply templateURI="longBar.zul" />
 
-			<label id="now" sclass="time" />
+			<!-- Clock -->
+			<apply templateURI="clock.zul" />
+
 			<!-- Main Page -->
 			<n:div sclass="col-12 container-fluid">
 				<div width="100%">
