--- a/src/main/webapp/resources/css/person-info.css
+++ b/src/main/webapp/resources/css/person-info.css
@@ -4,7 +4,7 @@
     border-top-color: #d9d9d9;
     border-right-color: #d9d9d9;
     border-bottom-color: #d9d9d9;
-    border-left-color: var(--bs-color);
+    border-left-color: #d9d9d9;
     border-style: solid;
     background-color: black;
 }
